@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Automatically generated by splashy_config. Do not edit -->
 <splashy>
-    <!-- themes directory: conventional path @EXPANDED_SYSCONFDIR@/splashy/themes -->
-    <themes>@EXPANDED_SYSCONFDIR@/splashy/themes</themes>
+    <!-- themes directory: conventional path @datarootdir@/splashy/themes -->
+    <themes>@datarootdir@/splashy/themes</themes>
     <!-- current theme could be relative the themes defined above or full path -->
     <current_theme>default</current_theme>
     <!-- full path to theme to fall back in case of problems. DO NOT CHANGE -->
-    <default_theme>@EXPANDED_SYSCONFDIR@/splashy/themes/default</default_theme>
+    <default_theme>@datarootdir@/splashy/themes/default</default_theme>
     <pid>/etc/splashy/splashy.pid</pid>
 </splashy>
